--- a/app/src/main/res/layout/list_item_chat.xml
+++ b/app/src/main/res/layout/list_item_chat.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/iv_foto_profilo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/test" />
+                app:srcCompat="@drawable/placeholder" />
         </RelativeLayout>
 
         <TextView
