--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -19,13 +19,23 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:layout_weight="1"
+            android:layout_weight="3"
             android:drawableStart="@drawable/ic_search"
             android:drawablePadding="5dp"
             android:ems="10"
             android:hint="@string/search"
             android:inputType="textPersonName"
             />
+
+        <Button
+            android:id="@+id/searchBtn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            style="@style/primaryStyleButton"
+            android:drawablePadding="2dp"
+            android:layout_margin="15dp"
+            android:text="search" />
 
 
     </LinearLayout>
@@ -36,5 +46,6 @@
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="55dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/list_item_material_complete" />
 </LinearLayout>
