- Aggiunta barra di caricamento quando si esegue una ricerca o si ottengono i materiali per la prima volta

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,17 +16,38 @@
         android:text="@string/home"
         android:textAlignment="center"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/lv_home"
-
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        <ProgressBar
+            android:id="@+id/pb_caricamento"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
 
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+            style="?android:attr/progressBarStyleLarge"
 
-        tools:listitem="@layout/list_item_material_complete" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/lv_home"
+
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+
+            android:visibility="gone"
+
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+
+            tools:listitem="@layout/list_item_material_complete" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
