- Inizio creazione ChangeFotoProfiloFragment.kt per cambiare la foto profilo dell'utente - Implementato caricamento RecyclerView per la selezione dell'utente a cui si è venduto il materiale - Creato adapter appostito UserSaleAdapter.kt per la gestione corretta della RecylerView presente nel SoldFragment.kt - Corretto bug per cui crashava il ProfileFragment.kt nel caso in cui si cambiava la schermata prima che il thread avesse terminato di caricare la lista

--- a/app/src/main/res/layout/fragment_sold.xml
+++ b/app/src/main/res/layout/fragment_sold.xml
@@ -10,17 +10,24 @@
         android:id="@+id/tv_title_sold"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/testtext"
+
+        android:text="@string/choose_the_student_that_acquire_the_material"
+        android:textAlignment="center"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         style="@style/primaryStyleTextView"/>
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_chat_sold"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title_sold" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_title_sold"
+
+        tools:listitem="@layout/list_item_chat"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
