risolto problema chat vista dall'alto all'apertura

--- a/app/src/main/res/layout/activity_text_chat.xml
+++ b/app/src/main/res/layout/activity_text_chat.xml
@@ -36,6 +36,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/linearChat"
+        android:stackFromBottom="true"
+        android:transcriptMode="alwaysScroll"
         android:layout_below="@id/ll_topbar" />
 
     <LinearLayout
