- Risolto bug che non caricava la foto - Aggiunta barra di caricamento durante l'upload della foto - Sistemata grandezza ProgressBar - Sistemate piccolezze grafiche

--- a/app/src/main/res/layout/list_item_chat.xml
+++ b/app/src/main/res/layout/list_item_chat.xml
@@ -63,5 +63,6 @@
         android:layout_height="wrap_content"
         android:padding="15dp"
         android:text="@string/date_last_messagge"
-        android:layout_weight="15"/>
+        android:layout_weight="15"
+        android:textAlignment="viewEnd"/>
 </LinearLayout>
