--- a/app/src/main/res/layout/fragment_nuovo_annuncio_camera.xml
+++ b/app/src/main/res/layout/fragment_nuovo_annuncio_camera.xml
@@ -24,7 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_send_data"
+        app:layout_constraintBottom_toTopOf="@+id/cl_button_invio"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -43,27 +43,39 @@
             android:layout_weight="1"/>
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_send_data"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_button_invio"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="50dp"
-        android:text="@string/send_data"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent">
 
-    <Button
-        android:id="@+id/buttonTest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TestButton"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.121" />
+        <ProgressBar
+            android:id="@+id/pb_caricamento"
+            android:visibility="gone"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+
+            style="?android:attr/progressBarStyleLarge"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/btn_send_data"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            android:text="@string/send_data"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
