--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -48,8 +48,8 @@
 
         <ProgressBar
             android:id="@+id/pb_caricamento"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
 
             style="?android:attr/progressBarStyleLarge"
 
