--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -74,22 +74,11 @@
                     android:textAlignment="center"
                     android:visibility="gone" />
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/cl_material_sale"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:orientation="vertical">
-
-                <ProgressBar
-                    android:id="@+id/pb_caricamento"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-
-                    style="?android:attr/progressBarStyleLarge"
-
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/lv_ad_invendita"
@@ -121,22 +110,11 @@
                     android:textAlignment="center"
                     />
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/cl_materiale_transaction"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:orientation="vertical">
-
-                    <ProgressBar
-                        android:id="@+id/pb_caricamento2"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-
-                        style="?android:attr/progressBarStyleLarge"
-
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/lv_ad_venduti"
