- Aggiunta TextView in fragment_home.xml e fragment_search.xml in caso di materiali non presenti - Sostituite le restanti ProgressBar con le PersonalProgressBar.kt - Aggiunta ProgressBar per il caricamento delle immagini all'interno delle list_item_material e nel MaterialeFragment.kt - Adattata la funzione setBitmap in Gestore.kt per funzionare a meglio con PersonalProgressBar per il caricamento di immagini - Eliminato metodo inutile PersonalProgressBar.caricamento(ArrayList<Materiale>) - Aggiunta barra di caricamento durante il LoginFragment.kt - Aggiunta funzione PersonalProgressBar.setUpConstraintTop nel caso si voglia agganciare la barra di caricamento al di sotto di un altro elemento - Migliorata leggibilità nel caso le password non corrispondano durante la registrazione - Migliorato SearchFragment.kt in modo che, nel caso non ci siano annunci nel database, non sia possibile eseguire ricerche - Pulizia codice

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -64,6 +64,7 @@
             app:layout_constraintTop_toBottomOf="@id/et_email_login" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_login"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="48dp"
@@ -71,16 +72,6 @@
             app:layout_constraintStart_toStartOf="@+id/et_password_login"
             app:layout_constraintTop_toBottomOf="@+id/et_password_login">
 
-                <ProgressBar
-                    android:id="@+id/pb_caricamento"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:indeterminate="true"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:visibility="invisible"/>
 
                 <Button
                     android:id="@+id/btn_Login"
