--- a/app/src/main/res/layout/list_item_material_complete.xml
+++ b/app/src/main/res/layout/list_item_material_complete.xml
@@ -9,18 +9,28 @@
         android:background="@drawable/shape_item_listview"
         android:layout_margin="10dp">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/ll_information_materiale"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/ll_information_materiale">
     <ImageView
         android:id="@+id/iv_foto_materiale"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:src="@drawable/test"
-        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout2" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
+        android:id="@+id/ll_information_materiale"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -29,7 +39,7 @@
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv_prezzo"
-        app:layout_constraintStart_toEndOf="@+id/iv_foto_materiale"
+        app:layout_constraintStart_toEndOf="@+id/cl_image"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -65,8 +75,8 @@
         android:layout_height="wrap_content"
         android:padding="15dp"
         android:text="@string/price"
-        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintBottom_toBottomOf="@+id/ll_information_materiale"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout2" />
+        app:layout_constraintTop_toTopOf="@+id/ll_information_materiale" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
