--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,5 +38,16 @@
             app:layout_constraintTop_toTopOf="parent"
 
             tools:listitem="@layout/list_item_material_complete" />
+
+        <TextView
+            android:id="@+id/tv_nessun_materiale"
+            android:text="@string/there_are_no_materials"
+            android:textAlignment="center"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/lv_home"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
