--- a/app/src/main/res/layout/fragment_materiale.xml
+++ b/app/src/main/res/layout/fragment_materiale.xml
@@ -13,18 +13,28 @@
         tools:context=".MaterialeFragment"
         android:padding="10dp">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="48dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
         <ImageView
             android:id="@+id/iv_foto_materiale"
             android:layout_width="298dp"
             android:layout_height="365dp"
-            android:layout_marginStart="48dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="48dp"
+
             android:src="@drawable/test"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+             />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
             android:id="@+id/tv_nome_materiale"
@@ -33,9 +43,9 @@
 
             android:layout_marginTop="24dp"
             android:text="@string/name_of_material"
-            app:layout_constraintEnd_toEndOf="@+id/iv_foto_materiale"
-            app:layout_constraintStart_toStartOf="@+id/iv_foto_materiale"
-            app:layout_constraintTop_toBottomOf="@+id/iv_foto_materiale" />
+            app:layout_constraintEnd_toEndOf="@+id/cl_image"
+            app:layout_constraintStart_toStartOf="@+id/cl_image"
+            app:layout_constraintTop_toBottomOf="@+id/cl_image" />
 
         <TextView
             android:id="@+id/tv_nome_venditore"
