--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -46,7 +46,6 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         >
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_search"
 
@@ -62,5 +61,15 @@
             app:layout_constraintTop_toTopOf="parent"
 
             tools:listitem="@layout/list_item_material_complete" />
+        <TextView
+            android:id="@+id/tv_nessun_materiale"
+            android:text="@string/there_are_no_materials"
+            android:textAlignment="center"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/rv_search"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
