--- a/app/src/main/res/layout/list_item_material_with_button.xml
+++ b/app/src/main/res/layout/list_item_material_with_button.xml
@@ -9,14 +9,23 @@
         android:background="@drawable/shape_item_listview"
         android:layout_margin="10dp">
 
-    <ImageView
-        android:id="@+id/iv_foto_materiale"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:src="@drawable/test"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@+id/ll_information_materiale"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ll_information_materiale" />
+        app:layout_constraintTop_toTopOf="@+id/ll_information_materiale">
+        <ImageView
+            android:id="@+id/iv_foto_materiale"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/test"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <LinearLayout
@@ -29,7 +38,7 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_sold"
-        app:layout_constraintStart_toEndOf="@+id/iv_foto_materiale"
+        app:layout_constraintStart_toEndOf="@+id/cl_image"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
