--- a/app/src/main/res/navigation/my_nav_login.xml
+++ b/app/src/main/res/navigation/my_nav_login.xml
@@ -21,9 +21,5 @@
         android:id="@+id/registerFragment"
         android:name="com.example.usedbooks.login.RegisterFragment"
         android:label="fragment_register"
-        tools:layout="@layout/fragment_register" >
-        <action
-            android:id="@+id/action_registerFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_register" />
 </navigation>
