- Sistemati errori di scrittura in strings.xml - Risolto problema crash nel caso la chat fosse nuova e non ci fosse nessun nuovo messaggio - Migliorata leggermente grafica fragment_materiale.xml - Resi generali le funzioni di bind del MaterialeRecyclerAdapter.kt e del UserAdapter.kt, inserite nel Gestore.kt - Eliminato counter messaggi non letti - Miglioarata leggibilità grafica - Eliminato data ultimo messsaggio - Pulizia codice

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
             android:id="@+id/btn_Add_Annuncio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/add_annunce"
+            android:contentDescription="@string/add_announce"
             android:src="@drawable/ic_add"
             app:backgroundTint="?attr/colorPrimary"
             app:layout_anchor="@+id/bottomAppBar"
