- Risolto bug che non visualizzava correttamente la textview se non presente nessuna chat - Disabilitato pulsante durante l'operazione di RegisterFragment.kt

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -25,5 +25,6 @@
         android:layout_height="wrap_content"
         android:visibility="gone"
         android:text="@string/no_chats"
+        android:textAlignment="center"
         />
 </LinearLayout>
