- Aggiunto contorno circolare alle immagini profilo - Inserita (ma non implementata) funzione per ottenere la lista dei corsi - Inserito uno Spinner per selezionare il corso tra quelli disponibili - Cambiato il logo iniziale con scritta con il nome della app

--- a/app/src/main/res/layout/activity_text_chat.xml
+++ b/app/src/main/res/layout/activity_text_chat.xml
@@ -19,6 +19,9 @@
             android:id="@+id/iv_foto_profilo"
             android:layout_width="75dp"
             android:layout_height="75dp"
+
+            android:background="@drawable/bg_image_profile"
+
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
