--- a/app/src/main/res/layout/fragment_change_foto_profilo.xml
+++ b/app/src/main/res/layout/fragment_change_foto_profilo.xml
@@ -13,6 +13,8 @@
         android:layout_height="100dp"
         android:layout_margin="50dp"
 
+        android:background="@drawable/bg_image_profile"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,6 +25,8 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="70dp"
+
+        android:background="@drawable/bg_image_profile"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
