--- a/app/src/main/res/layout/fragment_nuovo_annuncio_dati.xml
+++ b/app/src/main/res/layout/fragment_nuovo_annuncio_dati.xml
@@ -46,19 +46,20 @@
 
         android:hint="@string/typology"
 
-        app:layout_constraintBottom_toTopOf="@+id/et_corso_new_annuncio"
+        app:layout_constraintBottom_toTopOf="@+id/sp_corsi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/et_corso_new_annuncio"
+    <Spinner
+        android:id="@+id/sp_corsi"
 
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="50dp"
         android:layout_marginBottom="10dp"
 
-        android:hint="@string/university_course"
+        android:background="@android:drawable/btn_dropdown"
+        android:spinnerMode="dropdown"
 
         app:layout_constraintBottom_toTopOf="@+id/et_prezzo_new_annuncio"
         app:layout_constraintEnd_toEndOf="parent"
