--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -19,6 +19,9 @@
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:layout_marginStart="20dp"
+
+            android:background="@drawable/bg_image_profile"
+
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/test" />
