--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".login.RegisterFragment">
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tv_title_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -23,7 +23,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2">
+        app:layout_constraintTop_toBottomOf="@+id/tv_title_register">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -47,6 +47,9 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
 
+                android:drawableStart="@drawable/ic_baseline_person_24"
+                android:drawablePadding="8dp"
+
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
@@ -57,6 +60,9 @@
 
                 android:layout_marginStart="48dp"
                 android:layout_marginTop="32dp"
+
+                android:drawableStart="@drawable/ic_baseline_person_24"
+                android:drawablePadding="8dp"
 
                 android:layout_marginEnd="48dp"
                 android:ems="10"
@@ -99,7 +105,7 @@
                 android:layout_marginTop="32dp"
 
                 android:layout_marginEnd="48dp"
-                android:drawableLeft="@drawable/ic_lock"
+                android:drawableStart="@drawable/ic_lock"
                 android:drawablePadding="8dp"
 
                 android:ems="10"
