--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:text="@string/usedbooks"
+            android:text="@string/app_name"
             style="@style/primaryStyleTextView"
             android:textAlignment="center"
 
