--- a/app/src/main/res/layout/list_item_chat.xml
+++ b/app/src/main/res/layout/list_item_chat.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/shape_item_listview">
 
     <ImageView
         android:id="@+id/iv_foto_profilo"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:background="@drawable/bg_image_profile"
-        app:srcCompat="@drawable/placeholder"
-        android:layout_weight="3"/>
+        app:srcCompat="@drawable/placeholder" />
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:orientation="vertical"
-        android:layout_weight="1">
+        android:orientation="vertical">
             <TextView
                 android:id="@+id/tv_nome_studente"
                 android:layout_width="wrap_content"
