--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,27 +10,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_login_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
 
-            android:text="@string/app_name"
-            style="@style/primaryStyleTextView"
-            android:textAlignment="center"
-
-            android:layout_marginTop="64dp"
+        <ImageView
+            android:id="@+id/image_logo"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/logo"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/et_email_login"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
-            android:layout_marginTop="80dp"
             android:layout_marginEnd="40dp"
 
             android:drawableStart="@drawable/ic_email"
@@ -43,7 +37,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_login_title" />
+            app:layout_constraintTop_toBottomOf="@+id/image_logo" />
 
         <EditText
             android:id="@+id/et_password_login"
