--- a/app/src/main/res/layout/fragment_nuovo_annuncio_dati.xml
+++ b/app/src/main/res/layout/fragment_nuovo_annuncio_dati.xml
@@ -52,15 +52,12 @@
 
     <Spinner
         android:id="@+id/sp_corsi"
-
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginHorizontal="50dp"
         android:layout_marginBottom="10dp"
-
-        android:background="@android:drawable/btn_dropdown"
+        android:background="@drawable/shape_spinner"
         android:spinnerMode="dropdown"
-
         app:layout_constraintBottom_toTopOf="@+id/et_prezzo_new_annuncio"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
