--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".main.search.SearchFragment"
     android:orientation="vertical"
+    android:background="?attr/colorPrimaryVariant"
     android:tag="search">
 
     <LinearLayout
