--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -11,33 +11,27 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-
+        android:orientation="horizontal"
+        android:padding="10dp">
         <EditText
             android:id="@+id/et_cerca_annunci"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:layout_weight="3"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="5"
             android:drawableStart="@drawable/ic_search"
             android:drawablePadding="5dp"
-            android:ems="10"
             android:hint="@string/search"
-            android:inputType="textPersonName"
-            />
+            android:inputType="textPersonName" />
 
         <Button
             android:id="@+id/bt_search"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             style="@style/primaryStyleButton"
             android:drawablePadding="2dp"
-            android:layout_margin="15dp"
             android:text="@string/search" />
-
-
     </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
